[package]
name = "api_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21.1"
getter = { path = "../getter", features = ["webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
tokio = "1.36.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
crate-type = ["rlib", "cdylib"]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
