[package]
name = "api_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = "0.21"  # from rustls-platform-verifier-android, sync version
getter = { path = "../getter", features = ["rustls-platform-verifier-android"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
tokio = "1.37.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
crate-type = ["rlib", "cdylib"]
strip = true
opt-level = 3
lto = true
codegen-units = 1
